# safesync

./: .gitignore  LICENSE  MILESTONES.md  README.md  pyproject.toml
.github/workflows/: tests.yml
safesync/: __init__.py  cli.py  engine.py  filesystem.py  model.py  watcher.py  web.py
safesync/static/: app.js  index.html  styles.css
tests/: crash_evidence.py  resolution_crash_evidence.py  test_crash_matrix.py  test_delete_move_watch.py  test_hardening.py  test_interface.py  test_sync.py
