[project]
name = "safesync"
version = "0.2.0"
description = "A deliberately small, local, data-preserving folder synchronizer"
requires-python = ">=3.11"
dependencies = ["watchdog>=6,<7"]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Archiving :: Backup",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project.scripts]
safesync = "safesync.cli:main"

[tool.unittest]
start-directory = "tests"
